clusters/aks-az01-dev-koko-01/awesome/bff/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: awesome-bff
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
  - host: awesome.kubepia.net
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: awesome-bff
            port:
              number: 8080
